<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".DeviceFragment" >

    <TextView
        android:id="@+id/textViewAbsenceBegin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/absence_begin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

	    <!--<Button
	        android:id="@+id/buttonTimePickerBegin"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="15dp"
	        android:layout_marginRight="15dp"
	        android:onClick="showTimePickerDialog"
	        android:text="@string/pick_time" />-->
	    
	    <Button
	        android:id="@+id/buttonDatePickerBegin"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
	        android:layout_marginBottom="15dp"
            android:background="@drawable/button_date_custom"
	        android:onClick="showDatePickerDialog"
	        android:text="@string/pick_date" />
    
    </LinearLayout>

    <TextView
        android:id="@+id/textViewAbsenceEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/absence_end" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

	    <!--<Button
	        android:id="@+id/buttonTimePickerEnd"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="15dp"
	        android:layout_marginRight="15dp"
	        android:onClick="showTimePickerDialog"
	        android:text="@string/pick_time" />-->
	    
	    <Button
	        android:id="@+id/buttonDatePickerEnd"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_date_custom"
	        android:onClick="showDatePickerDialog"
	        android:text="@string/pick_date" />
    
    </LinearLayout>

    <TextView
        android:id="@+id/textViewAbsenceReason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/absence_reason" />

    <EditText
        android:id="@+id/editTextAbsenceReason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:inputType="text"
        android:ems="10" />

    <Button
        android:id="@+id/buttonAbsenceSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_custom"
        android:onClick="sendEmail"
        android:text="@string/send" />

</LinearLayout>