<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/splashScreenLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/wallpaper_black" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:src="@drawable/campusid_icon_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:gravity="center_horizontal"
            android:layout_margin="20dp"
            android:text="@string/splash_screen"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:id="@+id/splashScreenTextView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_margin="20dp"
            android:text="@string/web_campusid"
            android:textSize="17sp"
            android:autoLink="web"
            android:id="@+id/webCampusIdTextView"
            android:layout_below="@+id/splashScreenText"
            android:layout_alignLeft="@+id/splashScreenText"
            android:layout_alignStart="@+id/splashScreenText" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_marginBottom="5dp"
        android:textSize="7sp"
        android:textStyle="italic"
        android:text="@string/authors"
        android:id="@+id/authorsTextView"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>